# Android-Object-Detector-and-Tracker

./: build.gradle  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/qualcomm/qti/snpe/imageclassifiers/: MainActivity.java  ModelCatalogueFragment.java
app/src/main/java/com/qualcomm/qti/snpe/imageclassifiers/detector/: Anchor.java  Bbox.java  MobilenetDetector.java  Recognition.java  RetinaDetector.java  TFMobilenetQuantizeDetector.java  TensorUtils.java
app/src/main/java/com/qualcomm/qti/snpe/imageclassifiers/sortJni/: TrackHuman.java  TrackLabel.java  TrackUtils.java  nativeObjectTracker.java
app/src/main/java/com/qualcomm/qti/snpe/imageclassifiers/thread/: DetectorResult.java  DetectorThread.java  FrameLoaderResult.java  PostProcessThread.java  PreprocessResult.java  PreprocessThread.java
app/src/main/java/com/qualcomm/qti/snpe/imageclassifiers/view/: VideoSurfaceView.java
app/src/main/jni/: CMakeLists.txt  Hungarian.h  KalmanTracker.h  SortTracker.h  sort_jni.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: car_transpose.raw  retina_480x850_quantize_v11.dlc  retina_mb_nosm_h288_w512_quantized.dlc
gradle/wrapper/: gradle-wrapper.properties
